<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ForHackathon2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wifi">Wifi</string>
    <string name="title_activity_parking">Parking</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_culture">Culture</string>
    <string name="title_activity_gas_station">GasStation</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_events_of_day">EventsOfDay</string>
    <string name="title_activity_event">Event</string>
    <string name="calendarWhat">\u2022 What:</string>
    <string name="calendarWhere">\u2022 Where:</string>
    <string name="calendarTime">\u2022 At:</string>
    <string name="calendarMore">\u2022 More:</string>
    <string name="title_activity_culture_item">CultureItem</string>
    <string name="title_activity_culture_type">CultureType</string>
    <string name="menu1">Wifi</string>
    <string name="menu2">Parking</string>
    <string name="menu3">Gas Station</string>
    <string name="menu4">Events</string>
    <string name="menu5">Culture</string>
    <string name="menu6">About</string>
    <string name="title_activity_maps">Activity Map</string>
    <string name="closer_wifi">Closer Wifi: </string>
    <string name="closer_parking">Closer Parking: </string>
    <string name="closer_gas_station">Closer Gas Station: </string>
    <string name="title_culture_item">Title </string>
    <string name="no_events">No event for today </string>
    <string name="about">This app designed for the Hackathon Event 2014. Shows the wifi, parking and gas-station spots in map.
        Also, there is a calendar which contains all the events that take place in Thessaloniki per day. And finally, describes all
        the places for cultural events such as theater performances, cinema, museums etc.
    </string>
    <string name="developers"> The developer team consists of Paniskaki Kyriaki and Papazoglou Christos-Panagiotis, students
        at Informatics School of Aristotle University of Thessaloniki.
    </string>
    <string name="mail">kiki_paniskaki@hotmail.com  papazockp@gmail.com</string>
    <string name="contact">Contact</string>
</resources>
